feat: better split lore impl